// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Icon renders Icon correctly using iconName 1`] = `
<i
  aria-hidden="true"
  class=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: inline-block;
        font-family: "FabricMDL2Icons";
        font-style: normal;
        font-weight: normal;
        speak: none;
        text-decoration: inherit;
      }
  data-icon-name="Upload"
>
  
</i>
`;

exports[`Icon renders Icon with children correctly 1`] = `
<i
  aria-hidden="true"
  class=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: inline-block;
        font-family: "FabricMDL2Icons";
        font-style: normal;
        font-weight: normal;
        speak: none;
        text-decoration: inherit;
      }
  data-icon-name="Upload"
>
  <span>
    This icon has children that are rendered inside of it
  </span>
</i>
`;

exports[`Icon renders Icon with custom styles 1`] = `
<i
  aria-hidden="true"
  class=
      root
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: inline-block;
        font-family: "FabricMDL2Icons";
        font-style: normal;
        font-weight: normal;
        speak: none;
        text-decoration: inherit;
      }
  data-icon-name="Upload"
>
  
</i>
`;

exports[`Icon renders Icon with getStyles 1`] = `
<i
  aria-hidden="true"
  class=
      className
      root
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: inline-block;
        font-family: "FabricMDL2Icons";
        font-style: normal;
        font-weight: normal;
        speak: none;
        text-decoration: inherit;
      }
  data-icon-name="Upload"
>
  
</i>
`;

exports[`Icon renders Icon with imageProps correctly 1`] = `
<span
  aria-hidden="true"
  class=
      ms-Icon-imageContainer
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        display: inline-block;
        font-family: "FabricMDL2Icons-2";
        font-style: normal;
        font-weight: normal;
        overflow: hidden;
        speak: none;
        text-decoration: inherit;
      }
  data-icon-name="CompassNW"
>
  <div
    class=
        ms-Image
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          overflow: hidden;
        }
  >
    <img
      class=
          ms-Image-image
          ms-Image-image--portrait
          is-notLoaded
          is-fadeIn
          {
            display: block;
            opacity: 0;
          }
      src="https://res-1.cdn.office.net/files/fabric-cdn-prod_20230815.002/office-ui-fabric-react-assets/icon-one.png"
    />
  </div>
</span>
`;
